Fix reverse-bridge exec()-raises SIGSEGV: PackageManager module-path gap + wrong JPPyObject policy
Root-caused the crash from ExecCrashDebug.md to two stacked bugs:

1. org.jpype.pkg.PackageManager couldn't enumerate an application module's
   own package contents when the JVM is launched with --module-path/
   --add-modules (exactly how Maven Surefire runs this suite, and how
   org.jpype.Launcher is meant to be embedded generally).
   ClassLoader.getResources() only reliably sees classpath/unnamed-module
   and --patch-module content, not a named module's own resources. Added
   isNamedModulePackage/getNamedModuleContents using
   ModuleLayer.boot().configuration() + ModuleReader, the module-path
   counterpart to the existing jar/jrt lookups.

   Consequence of the gap: jpype/_jbridge.py's _jpype._exc dict (which maps
   Python exception types to their python.exceptions.Py*Error Java
   classes) ended up empty under mvn test, silently giving 15 pre-existing
   tests the wrong exception type (a generic RuntimeException instead of
   the typed Py*Error) - previously masked entirely by bug 2 aborting the
   JVM before Surefire could report it.

2. JPypeException::convertPythonToJava (native/common/jp_exception.cpp)
   used JPPyObject::claim() instead of JPPyObject::accept() on the
   _pyexc_convert() call result. claim() throws on null instead of
   returning a null-wrapping object, so any conversion failure (bug 1, or
   any future cause) threw a second JPypeException from inside toJava's
   try block, landing in its "exception handling itself failed"
   fail-fast (a deliberate null-deref) instead of the graceful
   fail()-based RuntimeException fallback already coded right next to it.

mvn -o verify: 662/662, 0 failures, 0 errors, 14 skipped (same baseline as
before), confirmed stable across repeated runs. Full debugging trail and
root-cause writeup in plan/ExecCrashDebug.md; plan/Coverage.md's
python.exceptions section is unblocked.

Co-Authored-By: Claude Sonnet