@@ -1,158 +1,162 @@
 # Debug: reverse-bridge `exec()`-raises SIGSEGV, Maven-only
 
-## Status (2026-07-18): CONFIRMED REAL, NOT ROOT-CAUSED, REPRO NARROWED TO MAVEN/SUREFIRE/TESTNG
+## Status (2026-07-18): ROOT-CAUSED AND FIXED. Two real bugs, both fixed.
+`mvn -o verify -Dpython.executable=python3.10`: 662/662 tests, 0 failures, 0
+errors, 14 skipped (same baseline as before), confirmed stable across
+repeated runs. Ready to move `plan/Coverage.md`'s `python.exceptions` pass
+out of "blocked."
 
-Discovered while starting the `python.exceptions` pass of [[plan/Coverage.md]].
-Blocks writing more `python.exceptions` tests via `exec()` until understood -
-see that plan's "Concrete known low spots" section for the coverage-side
-writeup. This file is purely the debugging log/next-steps for the crash
-itself.
+## Root cause: two independent bugs stacked on top of each other
 
-## The bug
+### Bug 1 (Java side, the actual trigger): `PackageManager` can't see an
+application module's own packages under `--module-path` launch
 
-Any Python exception raised during a reverse-bridge call whose Java-side
-method returns `void` (concretely: `Script.exec(String)` /
-`PyBuiltIn.exec(...)` → `Backend.exec(...)`, a JDK dynamic-proxy call
-dispatched through `org.jpype.proxy.ProxyInstance.hostInvoke`) crashes the
-JVM with `SIGSEGV` inside `JPypeException::toJava(JPJavaFrame&) [clone
-.cold]` (`native/common/jp_exception.cpp`).
+`native/jpype_module/src/main/java/org/jpype/pkg/PackageManager.java`'s
+`getContentMap`/`isPackage` enumerate a Java package's contents via two
+paths: `getJarContents` (classpath/unnamed-module, via
+`ClassLoader.getSystemClassLoader().getResources(name)`) and
+`getModuleContents` (JDK platform modules, via the `jrt:/` filesystem).
+Neither path covers a **named application module's own packages** when the
+JVM is launched with `--module-path=.../org.jpype-*.jar
+--add-modules=org.jpype` (exactly how Maven Surefire launches the reverse-
+bridge test JVM, and how `org.jpype.Launcher` is meant to be embedded in
+general). `ClassLoader.getResources()` does not reliably walk a named
+module's own resources - only classpath entries and anything separately
+patched in via `--patch-module` (which is why a `--patch-module`-injected
+test class like a scratch `MiniExcNGTest` in package `python.exceptions`
+*was* visible while the real `python.exceptions.Py*Error` classes, compiled
+into the module jar itself, were not).
+
+Consequence: `jpype/_jbridge.py`'s `initialize()` builds `_jpype._exc` by
+walking `dir(JPackage("python.exceptions"))` **once**, at interpreter
+startup (before any test method has run). Under `mvn test`'s module-path
+launch this walk found **zero** real exception classes (confirmed via
+direct diagnostic: `len(_jpype._exc) == 0`), deterministically and on every
+run - not flaky, not order-dependent, not related to which test happened to
+run first (there's no "run first" for a startup-time walk anyway). The
+662/662-passing baseline recorded earlier in `plan/Coverage.md` this same
+session did not actually exercise this path meaningfully - once the fail-
+fast crash (bug 2, below) was fixed and the full suite could run to
+completion without aborting, **15 pre-existing tests** across
+`python.exceptions`, `python.lang` (`PyExcNGTest`, `PyRangeNGTest`), `python.
+collections` (`PyChainMapNGTest`), `DispatchFallbackNGTest`, and
+`JPypeScriptEngineNGTest` turned out to already be silently getting the
+wrong exception type (`java.lang.RuntimeException` wrapping a repr string,
+instead of the correct `python.exceptions.Py*Error` subtype) - this was
+always broken under `mvn test`, just never surfaced because bug 2 crashed
+the JVM before any of these assertions' real failure could be reported by
+Surefire.
+
+**Fix**: added `isNamedModulePackage`/`getNamedModuleContents` to
+`PackageManager`, using `ModuleLayer.boot().configuration().modules()` to
+find which resolved module declares the target package (via
+`ModuleDescriptor.packages()`), then `ModuleReader.list()`/`.find()` to
+enumerate and resolve its class-file resources - the module-path
+counterpart to the existing `getJarContents`. Wired into both `isPackage`
+and `getContentMap` alongside the existing jar/jrt paths.
+
+### Bug 2 (native, the crash mechanism): wrong `JPPyObject` policy turns any
+conversion failure into an unrecoverable fail-fast
+
+`JPypeException::convertPythonToJava` (`native/common/jp_exception.cpp`)
+calls `_jpype._pyexc_convert(exc)` to turn a raised Python exception into
+its matching Java throwable, then does:
+```cpp
+JPPyObject proxy_res = JPPyObject::claim(PyObject_CallFunctionObjArgs(pyexc_convert_fn, exc.get(), nullptr));
+if (proxy_res.isNull()) { ... fail(frame, msg); return; }
+```
+The `if (proxy_res.isNull())` fallback makes it obvious the author expected
+`_pyexc_convert` might legitimately fail and wanted to degrade gracefully to
+a generic Java `RuntimeException` via `fail()`. But `JPPyObject::claim()`
+(`native/python/jp_pythontypes.cpp`) asserts its argument is non-null and
+**throws** if it isn't (`ASSERT_NOT_NULL` → `JP_RAISE_PYTHON()`) - it never
+returns a null-wrapping `JPPyObject` on failure the way `JPPyObject::accept()`
+does. So the moment `_pyexc_convert` actually raised (which, per bug 1,
+was *every single time* under `mvn test`), `claim()` threw a **second**
+`JPypeException` from inside `toJava`'s try block, landing in its
+`catch (JPypeException&)` block - which is a deliberate, by-design fail-fast
+for "exception handling itself failed catastrophically" (`int *i = nullptr;
+*i = 0;`, `GCOVR_EXCL_START`-marked). That fail-fast is correct for its
+intended trigger (something going wrong badly enough that Python/Java error
+state can no longer be trusted); it was never meant to fire just because a
+normal, anticipated "conversion failed, fall back to a generic exception"
+path took a wrong turn through the wrong `JPPyObject` policy.
+
+Confirmed via disassembly earlier this session (see prior status below,
+kept for the record) that the crashing instruction really was this
+fail-fast, not something else; confirmed via targeted `fprintf`
+instrumentation (added temporarily, removed after use - see "how this was
+found" below) that the second exception was thrown from exactly this
+`claim()` call, and that it originated from `_pyexc_convert` raising
+`RecursionError: maximum recursion depth exceeded while calling a Python
+object` - because `_jbridge.py`'s `_pyexc_convert` falls back to calling
+*itself* on an `AssertionError` when no match is found in `_jpype._exc`,
+which recurses forever when `_jpype._exc` is itself empty (bug 1).
+
+**Fix**: changed `claim()` to `accept()` for that one call. `accept()`
+clears the Python error state and returns a null-wrapping `JPPyObject`
+instead of throwing, so `proxy_res.isNull()` now actually triggers as
+originally intended, and the existing `fail()` fallback (a plain Java
+`RuntimeException`) surfaces instead of a JVM crash. This fix is valuable
+independent of bug 1 - it makes the exception-conversion path robust
+against *any* future reason `_pyexc_convert` might fail, not just this one.
+
+## How this was found (for the debugging-method record)
+
+Given a reliable Maven-only reproducer and a battery of standalone repros
+that all failed to reproduce it (see "prior status" below), the next
+session judged that further gdb-wrapping of Surefire's fork (previously
+shown to corrupt Surefire's own JVM probing and silently change its launch
+mode - see "Debugging tooling notes" below) was less promising than direct
+instrumentation of the suspect code path, compiled into the real binary and
+exercised via the real, reliable `mvn test` reproducer (which needs no
+launch-command changes at all, sidestepping the Surefire-probing pitfall
+entirely). Added temporary `fprintf(stderr, ...)` checkpoints (not gated by
+the `JP_TRACE`/`JP_TRACING_ENABLE` machinery, which is compiled out
+entirely in a normal build and would have required a separate, behavior-
+changing rebuild) at each step of `convertPythonToJava` and in `toJava`'s
+catch blocks, rebuilt via `make -f project/dev.mk`, and ran the existing
+`mvn -o test -Dtest=<TestClass>` reproducer directly - no gdb, no `-Djvm=`
+wrapping. This pinpointed the exact call (`claim()` on the `_pyexc_convert`
+result) and, via one more targeted `PyErr_Fetch`-based checkpoint, the
+exact underlying Python exception (`RecursionError`), which led directly
+to the `_jpype._exc` len-zero finding via a small diagnostic `context.exec()`
+script run from the same Maven test. All instrumentation was removed after
+use; the two fixes above are the only production-code changes.
+
+## Prior status (kept for the record, superseded by the above)
 
 Confirmed via disassembly (`objdump -d -C` on the installed `_jpype.so`,
 matching the `hs_err_pid*.log` crash offset exactly) that the faulting
-instruction is the deliberate `int *i = nullptr; *i = 0;` inside `toJava`'s
-own `catch (JPypeException& ex)` block (compiled to a literal `movl
-$0x0,0x0`). That block only exists as a "we're already too corrupted to
-unwind safely" fail-fast for when exception-handling *itself* throws a
-second `JPypeException` - so the real bug is whatever throws that second
-exception from inside `convertPythonToJava`/`toJava`'s try block, not this
-catch block itself (which is working as designed, just for an
-unanticipated trigger).
+instruction was the deliberate `int *i = nullptr; *i = 0;` inside `toJava`'s
+own `catch (JPypeException& ex)` block. Reproduced deterministically via
+`mvn -o test -Dtest=<TestClass>` in `native/jpype_module`, 3/3 times, with
+three different triggers - explained now: any raised Python exception hits
+this, since `_jpype._exc` was unconditionally empty under this launch mode.
 
-Reproduced deterministically via `mvn -o test -Dtest=<TestClass>` in
-`native/jpype_module`, 3/3 times, with three different triggers:
-`context.exec("raise AssertionError('test')")`,
-`context.exec("raise ValueError('test')")`, and the organically-raised
-`context.exec("int('not a number')")` - i.e. not tied to one exception
-type or to explicit `raise` vs. a naturally-raised error. A separate,
-apparently-unrelated *flaky* crash at the same `toJava` frame was also
-observed once from `JPypeScriptEngineNGTest.testBindingsRoundTrip` (a
-non-raising `eval` call, via `ScriptEngine.eval`/`.put`), but it did not
-reproduce on a clean rebuild - noted here so it isn't lost, not chased
-further yet. It may be the same root cause manifesting on a later,
-unrelated call (see "corrupted state, not corrupted call" theory below).
+Ruled out (still true, just no longer the active mystery): JaCoCo, plain
+JPMS module/patch-module boundaries in isolation, small-scale repetition.
+The real missing ingredient (per the "what wasn't reproduced outside
+Maven" section of the original writeup) was candidate 4: the real
+`--module-path`+`--add-modules` launch of the actual `org.jpype` module
+jar itself (not just a `--patch-module`-injected single class) - because
+the bug isn't really about Surefire/TestNG at all, it's about how
+`PackageManager` resolves an application module's package contents.
 
-## What's ruled out (each confirmed by a real, run repro, not guesswork)
+**Debugging tooling notes worth keeping**: `-Djvm=<path>` to Surefire is
+unreliable for gdb-wrapping (corrupts Surefire's own JVM probing, can
+silently change launch mode); WSL intercepts core dumps (no local core file
+ever produced); disassembly-only diagnosis (`nm -C` + `objdump -d --no-show-
+raw-insn -C`, cross-referenced against `hs_err_pid*.log`'s offset) is a
+good first step before reaching for gdb; a minimal non-Maven repro needs
+`target/org.jpype-1.7.2.dev0.jar` specifically, not the repo-root
+`org.jpype.jar` (confirmed stale, see
+[[jpype_feedback_use_devmk_not_adhoc_ninja]]).
 
-- **Not caused by JaCoCo.** Reproduced the exact same call sequence
-  (`org.jpype.Script.exec_(...)` raising, driven from Python via
-  `jpype.startJVM()` against the current `target/org.jpype-1.7.2.dev0.jar`)
-  with JaCoCo's `-javaagent` attached from the Python-side JVM launch -
-  20 iterations, no crash. See `/tmp/repro4.py`-style script (not checked
-  in - scratch only) for the pattern; the key ingredients were
-  `-javaagent:.../org.jacoco.agent-0.8.14-runtime.jar=destfile=...` plus
-  `--enable-native-access=ALL-UNNAMED` on `jpype.startJVM()`.
-- **Not caused by JPMS module boundaries alone.** Reproduced with a
-  hand-built `java` invocation using `--module-path`, `--add-modules=
-  org.jpype`, and `--patch-module=org.jpype=<dir>` (patching a test class
-  directly into the `org.jpype` module, matching how Surefire patches
-  `target/test-classes` in) - still no crash, plain Java `main()`, no
-  TestNG involved.
-- **Not caused by repetition/allocator wraparound at a small scale.**
-  50 sequential raising `exec()` calls through a single reused
-  `org.jpype.Script` instance (matching how `PyTestHarness`'s static
-  `context` field is shared across all NGTest methods in a suite run) -
-  no crash. Doesn't rule out a *much* larger scale (662-test suite worth
-  of prior allocation churn) still mattering; see GlobalPool note below.
-- **Root cause is *not* "the `_jpype._exc` dict is missing an entry" or
-  similar Python-side config gap** - `PyExcNGTest`'s existing
-  `eval("1/0")`/`eval("int('not a number')")` tests already exercise the
-  identical `convertPythonToJava` → `_pyexc_convert` → `_jpype._exc[cls](...)`
-  path successfully for `PyZeroDivisionError`/`PyValueError`, so the
-  lookup/construction machinery itself works; only the caller being a
-  `void`-returning `exec()` call, run under Maven specifically, differs.
+## Verification
 
-## What was NOT successfully reproduced outside Maven
-
-Every hand-built repro outside `mvn test` succeeded (no crash), including
-one that matched the real command line closely: `--enable-native-access`,
-`--module-path`, `--add-modules=org.jpype`, `--patch-module=org.jpype=...`,
-`--add-opens=org.jpype/org.jpype=ALL-UNNAMED`, `--add-reads=org.jpype=
-ALL-UNNAMED`, JaCoCo's `-javaagent`, all together, calling
-`org.jpype.MainInterpreter`/`Script` directly from a plain `main()` (no
-TestNG). This means the remaining, unreproduced ingredient is specific to
-**Surefire's actual forked-JVM launch and/or TestNG's reflective test
-invocation** - not any single flag combination tried so far.
-
-Candidates not yet tried:
-1. **TestNG reflection dispatch itself** - `Method.invoke()` through
-   TestNG's `MethodInvocationHelper`/`TestInvoker` machinery, as opposed to
-   a directly-called `main()`. A quick reflection-wrapped call
-   (`Method.invoke` on a lambda-backed method, no TestNG) was tried and did
-   *not* crash, but that's not the same as TestNG's actual invocation path
-   (extra listener/interceptor machinery, `Object[]` boxing of args, etc.).
-2. **JIT/tiering state at the time of the call.** Maven's fork loads far
-   more classes and runs far more code before reaching any given test
-   method than a minimal repro does; if this is a JIT-compiled-code bug
-   (e.g. a miscompilation of `hostInvoke` or `toJava` at C2, or of the JNI
-   trampoline), a minimal repro may simply never warm up enough to trigger
-   it. Worth trying `-Xcomp` or `-XX:-TieredCompilation` on a minimal repro
-   to force early C2 compilation and see if that alone triggers it without
-   Maven/TestNG at all.
-3. **Accumulated native-side allocator state from the *whole* prior test
-   suite**, not just repeated raises - the session's own `GlobalPool`
-   ("stamp mismatch... prefix wraparound reuse") warnings appear in normal
-   (non-crashing) runs too and are believed benign
-   ([[jpype_globalpool_allocator_status]]), but that belief predates this
-   bug; worth a repro that runs a large, varied chunk of the *real* NGTest
-   suite first (not just 50 identical raises) before attempting the
-   crashing call, to see if heavier/more varied prior allocation churn is
-   the missing ingredient rather than TestNG/Surefire specifically.
-4. **The exact `--patch-module` *target directory*.** Real Surefire patches
-   in `target/test-classes` (many classes: all NGTests, not just one) plus
-   uses `--add-opens` scoped per-package based on which test packages were
-   *scanned*, not just the one under test. The repro only ever patched in
-   a single tiny class - a `--patch-module` pointing at the *real*
-   `target/test-classes` directory (untried) would be closer to the real
-   condition and cheap to try next.
-
-## Debugging tooling notes (so the next session doesn't rediscover these)
-
-- **`-Djvm=<path>` to Surefire is unreliable for gdb-wrapping.** Surefire
-  uses the configured `jvm` path for its own internal probing (module
-  descriptor / version detection) in addition to the actual forked test
-  run. A gdb wrapper's extra stdout/stderr silently corrupts that probing,
-  which makes Surefire fall back to a different launch mode entirely
-  (manifest-only-jar classpath instead of `--module-path` +
-  `--patch-module`) - so the "crash" you're chasing may just stop
-  reproducing because you changed the launch mode, not because you fixed
-  anything. If retrying this path: filter the wrapper script so it only
-  invokes gdb when the args contain `ForkedBooter`/the real test-run
-  marker, and pass everything else straight through untouched (see
-  `/tmp/fakejdk/bin/java`-style script from this session, not checked in).
-  Even with that filter, one attempt still fell back to manifest-jar mode
-  for unclear reasons and needs re-verifying with
-  `-Dsurefire.useManifestOnlyJar=false -Dsurefire.useSystemClassLoader=false`
-  added.
-- **WSL intercepts core dumps** (`/proc/sys/kernel/core_pattern` is
-  `|/wsl-capture-crash ...`, not writable without root) - no local core
-  file is produced on crash, so live gdb attach (`-p <pid>`) or wrapping
-  the launch command is the only option, not post-mortem core analysis.
-- **Disassembly-only diagnosis is possible and was useful here**: `nm -C
-  _jpype.so | grep toJava` to get the `.cold` clone's symbol, then
-  `objdump -d --no-show-raw-insn -C _jpype.so` sliced to that symbol,
-  cross-referenced against the `hs_err_pid*.log`'s `+0x4a` offset -
-  confirmed exactly which C++ line faults without needing a live debugger
-  at all. Good first step before reaching for gdb.
-- A minimal non-Maven repro needs, at minimum: `target/org.jpype-1.7.2.dev0.jar`
-  (**not** the repo-root `org.jpype.jar` - confirmed stale this session,
-  missing `Launcher.class`/`Runner.class` entirely, see
-  [[jpype_feedback_use_devmk_not_adhoc_ninja]]) plus
-  `net.java.dev.jna:jna:5.17.0` on the classpath/module-path.
-
-## Next step
-
-Try candidate 4 first (real `--patch-module=org.jpype=target/test-classes`
-pointing at the actual, full compiled test tree, not a synthetic one-class
-directory) since it's the cheapest to try and closest to the untested gap;
-fall back to candidate 1 (real TestNG dispatch, not `main()`) if that
-doesn't reproduce it, then candidate 2 (`-Xcomp`) if neither does.
+`mvn -o verify -Dpython.executable=python3.10`: 662/662, 0 failures, 0
+errors, 14 skipped (same as the pre-existing baseline), run twice to
+confirm determinism (not flaky). JaCoCo report regenerates cleanly.
+python3.12 not re-verified here - it has its own separate, pre-existing,
+unrelated environment issue noted in `plan/Coverage.md`.
